# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--arch@arch.thinkmo.de--2003-archives/moin--main--1.5
#

2006-02-18 16:31:50 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-452

    Summary:
      user.isSuperUser() check, require cfg.superuser being a list or tuple
    Revision:
      moin--main--1.5--patch-452

    user.isSuperUser() check, require cfg.superuser being a list or tuple
    

    modified files:
     ChangeLog MoinMoin/action/AttachFile.py
     MoinMoin/action/Despam.py MoinMoin/macro/SystemAdmin.py
     MoinMoin/user.py MoinMoin/userform.py docs/CHANGES


2006-02-18 15:21:40 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-451

    Summary:
      only check once for spiders
    Revision:
      moin--main--1.5--patch-451

    only check once for spiders
    

    modified files:
     ChangeLog MoinMoin/logfile/eventlog.py MoinMoin/request.py
     MoinMoin/util/web.py


2006-02-16 23:09:47 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-450

    Summary:
      added translator to thank-you list, use 'we' instead 'I', add MoinCoreGroup
    Revision:
      moin--main--1.5--patch-450

    added translator to thank-you list, use 'we' instead 'I', add MoinCoreGroup
    

    modified files:
     ChangeLog README


2006-02-16 23:08:06 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-449

    Summary:
      surge protection: specialcase AttachFile, fix no cache exists case
    Revision:
      moin--main--1.5--patch-449

    surge protection: specialcase AttachFile, fix no cache exists case
    

    modified files:
     ChangeLog MoinMoin/multiconfig.py MoinMoin/request.py


2006-02-16 18:43:13 GMT	Alexander Schremmer <alex@alexanderweb.de.tla>	patch-448

    Summary:
      Fixed PythonErrorEditingFrontPage.
    Revision:
      moin--main--1.5--patch-448


    modified files:
     ChangeLog MoinMoin/formatter/pagelinks.py
     MoinMoin/parser/wiki.py docs/CHANGES

