@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--arch@arch.thinkmo.de--2003-archives/moin--main--1.5
 #
 
+2006-02-18 17:12:14 GMT	Alexander Schremmer <alex@alexanderweb.de.tla>	patch-453
+
+    Summary:
+      Moved type check of the superuser setting.
+    Revision:
+      moin--main--1.5--patch-453
+
+
+    modified files:
+     ChangeLog MoinMoin/multiconfig.py MoinMoin/user.py
+
+
 2006-02-18 16:31:50 GMT	Thomas Waldmann <tw@waldmann-edv.de>	patch-452
 
     Summary:
